gcc/testsuite/rust/rustc/ui/parser/raw/too-many-hash.rs
// ignore-tidy-linelength

fn main() {
    let s: &str = r################################################################################################################################################################################################################################################################"very raw"################################################################################################################################################################################################################################################################;
// { dg-error "" "" { target *-*-* } .-1 }
}

